--- a/app/Resources/views/addressbook/add.html.twig
+++ b/app/Resources/views/addressbook/add.html.twig
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            {{ form_row(form.birthday, {'attr': {'class': 'form-control'}}) }}</td>
+            {{ form_row(form.birthday, {'attr': {'class': 'form-control', 'type': 'date'}}) }}</td>
         </div>
 
         <div class="form-group">
@@ -43,11 +43,11 @@
             {{ form_row(form.pictureUrl, {'attr': {'class': 'form-control'}}) }}</td>
         </div>
 
-    <input type="submit" value="Save" />
+    <input type="submit" value="Save" class="btn btn-info"/>
     {{ form_end(form) }}
 
 
-{#            <a href="{{ path('addressbook_index') }}">Back to the list</a>#}
+    <a href="/addressbook">Back to the list</a><br>
 
 </div>
 {% endblock %}
