--- a/app/Resources/views/addressbook/edit.html.twig
+++ b/app/Resources/views/addressbook/edit.html.twig
@@ -6,52 +6,50 @@
 
     {{ form_start(edit_form) }}
         <div class="form-group">
-            {{ form_row(form.firstName, {'attr': {'class': 'form-control'}}) }}</td>
+            {{ form_row(edit_form.firstName, {'attr': {'class': 'form-control'}}) }}</td>
         </div>
 
         <div class="form-group">
-            {{ form_row(form.lastName, {'attr': {'class': 'form-control'}}) }}</td>
+            {{ form_row(edit_form.lastName, {'attr': {'class': 'form-control'}}) }}</td>
         </div>
 
         <div class="form-group">
-            {{ form_row(form.streetAndNumber, {'attr': {'class': 'form-control'}}) }}</td>
+            {{ form_row(edit_form.streetAndNumber, {'attr': {'class': 'form-control'}}) }}</td>
         </div>
 
         <div class="form-group">
-            {{ form_row(form.zip, {'attr': {'class': 'form-control'}}) }}</td>
+            {{ form_row(edit_form.zip, {'attr': {'class': 'form-control'}}) }}</td>
         </div>
 
         <div class="form-group">
-            {{ form_row(form.city, {'attr': {'class': 'form-control'}}) }}</td>
+            {{ form_row(edit_form.city, {'attr': {'class': 'form-control'}}) }}</td>
         </div>
 
         <div class="form-group">
-            {{ form_row(form.phoneNumber, {'attr': {'class': 'form-control'}}) }}</td>
+            {{ form_row(edit_form.phoneNumber, {'attr': {'class': 'form-control'}}) }}</td>
         </div>
 
         <div class="form-group">
-            {{ form_row(form.birthday, {'attr': {'class': 'form-control'}}) }}</td>
+            {{ form_row(edit_form.birthday, {'attr': {'class': 'form-control', 'type': 'date'}}) }}</td>
         </div>
 
         <div class="form-group">
-            {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}</td>
+            {{ form_row(edit_form.email, {'attr': {'class': 'form-control'}}) }}</td>
         </div>
 
         <div class="form-group">
-            {{ form_row(form.pictureUrl, {'attr': {'class': 'form-control'}}) }}</td>
+            {{ form_row(edit_form.pictureUrl, {'attr': {'class': 'form-control'}}) }}</td>
+            {% if addressBook.pictureUrl %}<a href="{{ asset('uploads/pictures/' ~ addressBook.pictureUrl) }}" target="_blank">View picture</a>{% endif %}
+
         </div>
-        <input type="submit" value="Edit" />
+        <input type="submit" value="Edit" class="btn btn-info"/>
     {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-{#            <a href="{{ path('addressbook_index') }}">Back to the list</a>#}
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <div>
+        <a href="/addressbook">Back to the list</a><br>
+        {{ form_start(delete_form) }}
+            <input type="submit" value="Delete" class="btn btn-danger">
+        {{ form_end(delete_form) }}
+    </div>
 </div>
 {% endblock %}
